--- a/code-atlus/src/components/PortfolioCollage/PortfolioCollage.css
+++ b/code-atlus/src/components/PortfolioCollage/PortfolioCollage.css
@@ -1,16 +1,18 @@
 .portfoliocollage-content {
+  background-color: #282b39;
   display: grid;
   grid-template-columns: 1fr;
   gap: 0px;
   flex-grow: 1;
   color: white;
-  background-color: #282b39;
   padding: 30px;
   box-sizing: border-box;
   border-radius: 6px;
   width: 80%;
   min-width: 1000px;
   max-width: 1000px;
+  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .portfoliocollage-div h1 {
@@ -44,9 +46,14 @@
   color: white;
 }
 
+.portfoliocollage-content hr {
+    max-width: 700px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 .portfoliocollage-dateformat {
   display: flex;
-  gap: 4%;
 }
 
 .portfoliocollage-buttons {
